--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -2,15 +2,17 @@
 //= require underscore
 //= require rails
 //= require form
-//= require jquery.pjax
+//#= require jquery.pjax
 //= require jquery.alerts
 //= require rails.alerts
 //= require errbit
 //= require apps.show
 //= require turbolinks
+//= require jquery.turbolinks
 //= require_self
 
 // Allow any gems named 'errbit_*' to require their own assets
 <% Gem.loaded_specs.keys.grep(/^errbit_/).each do |plugin|
   require_asset(plugin) rescue Sprockets::FileNotFound
 end %>
+
